<resources>
    <string name="app_name">Calculadora</string>
    <string name="buttonCE">CE</string>
    <string name="buttonMas">+</string>
    <string name="buttonMenos">-</string>
    <string name="por">X</string>
    <string name="porcentaje">%</string>
    <string name="dividir">/</string>
    <string name="igual">=</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="buton8">8</string>
    <string name="buton9">9</string>
    <string name="zero">0</string>
    <string name="punto">.</string>


</resources>
